--- a/WpfApp1/View/LoginView.xaml
+++ b/WpfApp1/View/LoginView.xaml
@@ -72,7 +72,7 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="&#xe90e;"
                                            FontFamily="../Asset/Fonts/#iconfont"
-                                           FontSize="30"
+                                           FontSize="20"
                                            HorizontalAlignment="Center"
                                            VerticalAlignment="Center"
                                            Foreground="gray"/>
@@ -137,7 +137,7 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="&#xe66b;"
                                            FontFamily="../Asset/Fonts/#iconfont"
-                                           FontSize="30"
+                                           FontSize="20"
                                            HorizontalAlignment="Center"
                                            VerticalAlignment="Center"
                                            Foreground="gray"/>
@@ -202,7 +202,7 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="&#xe623;"
                                            FontFamily="../Asset/Fonts/#iconfont"
-                                           FontSize="30"
+                                           FontSize="20"
                                            HorizontalAlignment="Center"
                                            VerticalAlignment="Center"
                                            Foreground="Gray"/>
@@ -271,7 +271,7 @@
                         <ImageBrush ImageSource="../Asset/images/yztech.jpg"/>
                     </Border.Background>
                 </Border>
-                <TextBlock Text="Wilkommen!!" HorizontalAlignment="Center" FontSize="30" FontStyle="Oblique" Foreground="White"/>
+                <TextBlock Text="Data Management System" HorizontalAlignment="Center" FontSize="20" FontStyle="Oblique" Foreground="White"/>
             </StackPanel>
             <Grid Grid.Row="1" Margin="20,20" 
                   FocusManager.FocusedElement="{Binding ElementName=txtUserName}"><!--光标自动出现在username栏-->
