--- a/WpfApp1/View/SecondPageView.xaml
+++ b/WpfApp1/View/SecondPageView.xaml
@@ -21,7 +21,7 @@
             </ControlTemplate.Triggers>
         </ControlTemplate>
     </UserControl.Resources>
-    <Border CornerRadius="5" Background="White">
+    <Border CornerRadius="5" Background="White" Margin="0,10,0,0">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
