--- a/WpfApp1/View/SecondPageView.xaml
+++ b/WpfApp1/View/SecondPageView.xaml
@@ -78,13 +78,93 @@
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
                                     <RadioButton Content="{Binding CategoryName}" IsChecked="{Binding IsSelected}" Template="{StaticResource CategoryItemButtonTemplate}"  Margin="5,0"
-                                                 GroupName="teacher"/>
+                                                 GroupName="teacher"
+                                                 Command="{Binding DataContext.TeacherFilterCommand,RelativeSource={RelativeSource AncestorType=UserControl,Mode=FindAncestor}}"
+                                                 CommandParameter="{Binding CategoryName}"/>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
                     </StackPanel>
+                    <Button Grid.Row="2" Content="Add Course" Width="100" Height="30" HorizontalAlignment="right"
+                            VerticalAlignment="Center"/>
                 </Grid>
             </Border>
+
+            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden">
+                <ItemsControl ItemsSource="{Binding CourseList}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="150"/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="100"/>
+                                </Grid.ColumnDefinitions>
+                                <Border Width="90" Height="60" CornerRadius="5" Margin="0,15">
+                                    <Border.Effect>
+                                        <DropShadowEffect Color="Gray" ShadowDepth="0" BlurRadius="10" Opacity="0.3" Direction="0"/>
+                                    </Border.Effect>
+                                    <Border.Background>
+                                        <ImageBrush ImageSource="{Binding Cover}" Stretch="UniformToFill"/>
+                                    </Border.Background>
+                                </Border>
+                                <StackPanel Grid.Column="1" VerticalAlignment="Center">
+                                    <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                                        <TextBlock FontSize="16">
+                                <Hyperlink Foreground="#333"
+                                           Command="{Binding DataContext.OpenCourseUrl,RelativeSource={RelativeSource AncestorType=UserControl,Mode=FindAncestor}}"
+                                           CommandParameter="{Binding Url}"
+                                           ><!--取消超链接下划线-->
+                                    <Hyperlink.Style>
+                                        <Style>
+                                            <Setter Property="TextBlock.TextDecorations" Value="{x:Null}"/>
+                                        </Style>
+                                    </Hyperlink.Style>
+                                    <TextBlock Text="{Binding CourseName}"/>
+                                </Hyperlink>
+                            </TextBlock>
+                                        <ItemsControl Margin="15,0" ItemsSource="{Binding Teachers}">
+                                            <ItemsControl.ItemsPanel>
+                                                <ItemsPanelTemplate>
+                                                    <VirtualizingStackPanel Orientation="Horizontal"/>
+                                                </ItemsPanelTemplate>
+                                            </ItemsControl.ItemsPanel>
+                                            <ItemsControl.ItemTemplate>
+                                                <DataTemplate>
+                                                    <Border Background="#eee" Margin="5,0" CornerRadius="5">
+                                                        <TextBlock Text="{Binding}" Margin="12,3"/>
+                                                    </Border>
+                                                </DataTemplate>
+                                            </ItemsControl.ItemTemplate>
+                                        </ItemsControl>
+
+                                    </StackPanel>
+                                    <TextBlock Text="{Binding Description}"
+                                   TextWrapping="Wrap" LineHeight="23" Foreground="#AAA"/>
+
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Grid.Column="2"
+                                HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <TextBlock Margin="5,0">
+                                <Hyperlink>详情</Hyperlink>
+                                    </TextBlock>
+                                    <TextBlock Margin="5,0">
+                                <Hyperlink>删除</Hyperlink>
+                                    </TextBlock>
+                                </StackPanel>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+
+                </ItemsControl>
+            </ScrollViewer>
+
+            
         </Grid>
     </Border>
 </UserControl>
