--- a/WpfApp1/View/LoginView.xaml
+++ b/WpfApp1/View/LoginView.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp1.View"
         xmlns:common="clr-namespace:WpfApp1.Common"
         mc:Ignorable="d" Name="window"
-        Title="系统登录" Height="600" Width="360"
+        Title="系统登录" Height="600" Width="800"
         FontFamily="Microsoft YaHei" FontWeight="ExtraLight"
         ResizeMode="NoResize" WindowStartupLocation="CenterScreen" 
         WindowStyle="None" AllowsTransparency="True" Background="{x:Null}"
@@ -43,7 +43,7 @@
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
-        
+
         <SolidColorBrush x:Key="TextBox.Static.Border" Color="#FFABAdB3"/>
         <SolidColorBrush x:Key="TextBox.MouseOver.Border" Color="#FF7EB4EA"/>
         <SolidColorBrush x:Key="TextBox.Focus.Border" Color="#FF569DE5"/>
@@ -215,7 +215,7 @@
                                               MinHeight="20"/>
                                 <Image Source="../Asset/images/validation.jpg" Grid.Column="2"/>
                             </Grid>
-                           
+
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsEnabled" Value="false">
@@ -250,9 +250,9 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="1.8*"/>
                 <RowDefinition Height="3*"/>
-                <RowDefinition Height="60"/>
+
             </Grid.RowDefinitions>
-            <Border Background="#007dfa" CornerRadius="10,10,0,0" MouseLeftButtonDown="WinMove_MouseLeftButtonDown"/>
+            <Border Background="white" CornerRadius="10,10,0,0" MouseLeftButtonDown="WinMove_MouseLeftButtonDown"/>
             <ProgressBar  x:Name="ShowProgress"
                      
                      Height="5"
@@ -263,86 +263,54 @@
                     CommandParameter="{Binding ElementName=window}">
 
             </Button>
-            
 
-            <StackPanel VerticalAlignment="Bottom" Margin="0,0,0,20">
-                <Border Width="200" Height="80" Margin="0,0,0,10">
+
+            <StackPanel VerticalAlignment="top" HorizontalAlignment="Left" Margin="0,0,0,20" >
+                <Border Width="450" Height="80" Margin="0,0,0,10" CornerRadius="10,10,10,10">
                     <Border.Background>
-                        <ImageBrush ImageSource="../Asset/images/yztech.jpg"/>
+                        <ImageBrush ImageSource="../Asset/images/bonfigloili_logo.png"/>
                     </Border.Background>
                 </Border>
-                <TextBlock Text="Data Management System" HorizontalAlignment="Center" FontSize="20" FontStyle="Oblique" Foreground="White"/>
+
             </StackPanel>
             <Grid Grid.Row="1" Margin="20,20" 
-                  FocusManager.FocusedElement="{Binding ElementName=txtUserName}"><!--光标自动出现在username栏-->
+                  FocusManager.FocusedElement="{Binding ElementName=txtUserName}">
+                
+                <!--光标自动出现在username栏-->
                 <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition MinHeight="80" Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                     <RowDefinition MinHeight="23" Height="auto"/>
 
                 </Grid.RowDefinitions>
-                <TextBox Height="40" Text="{Binding LoginModel.UserName}" FontSize="20" 
-                         Foreground="#555" Style="{DynamicResource UserNameTextBoxStyle}" 
+
+                <StackPanel Orientation="Vertical" Grid.ColumnSpan="2" Margin="0,10,0.4,40.6" Grid.RowSpan="2">
+                    <TextBox Text="Product Code" FontSize="20" HorizontalAlignment="Center" FontWeight="Bold" BorderThickness="0"/>
+                    <TextBox Text="产品号码" FontSize="20" HorizontalAlignment="Center" FontWeight="Bold" BorderThickness="0"/>
+                </StackPanel>
+
+                <TextBox Height="40" Text="{Binding LoginModel.UserName}" FontSize="30" 
+                         Foreground="#555" 
                          TextChanged="TextBox_TextChanged_1"
-                         Name="txtUserName">
+                         Name="txtUserName"
+                         Grid.Row="1" Width="300"  HorizontalAlignment="Center" Margin="0,10,0,10"
+                         >
 
                 </TextBox>
-                <PasswordBox Grid.Row="1" Height="40" Style="{DynamicResource PasswordBoxStyle1}"
-                             common:PasswordHelper.Attach="True"
-                             common:PasswordHelper.Password="{Binding LoginModel.Password,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBox Grid.Row="2" Text="{Binding LoginModel.ValidationCode}" Height="40" TextChanged="TextBox_TextChanged" Style="{DynamicResource ValidationCodeTextBoxStyle}" Margin="0,15,0,9"/>
-                <Button Content="Login" Grid.Row="3" Height="40" Template="{StaticResource LoginButtonTemplate}"
+
+                <Button Content="Enter" Grid.Row="2" Height="40" Template="{StaticResource LoginButtonTemplate}"
                         Command="{Binding LoginCommand}"
-                        CommandParameter="{Binding ElementName=window}"
+                        CommandParameter="{Binding ElementName=window}" HorizontalAlignment="Center" Width="300" Margin="0,10,0,10"
                         />
-                <TextBlock Text="{Binding ErrorMessage}" Foreground="Green" FontSize="30" Grid.Row="4"
+                <TextBlock Text="{Binding ErrorMessage}" Foreground="Green" FontSize="30" Grid.Row="3"
                            TextWrapping="Wrap"
                            LineHeight="20"
                          FontFamily="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\Fonts\iconfont.ttf"
-                           HorizontalAlignment="Center"/>
-                
-            </Grid>
-            <Grid Grid.Row="2" Margin="20,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="20"/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition Width="30"/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <Border BorderBrush="#ddd" BorderThickness="0,0,0,1" VerticalAlignment="Center"/>
-                    <Border BorderBrush="#ddd" BorderThickness="0,0,0,1" VerticalAlignment="Center" Grid.Column="2"/>
-                    <TextBlock Text="OR" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="center"/>
-                </Grid>
-                <UniformGrid Columns="5" Grid.Row="1" Margin="0,0,0,5">
-                    <TextBlock Text="&#xe82c;"
-                                           FontFamily="../Asset/Fonts/#iconfont"
-                                           FontSize="30"
-                                           HorizontalAlignment="Center"
-                                           VerticalAlignment="Center"
-                                           Foreground="Gray"/>
-                    <Border Background="White"/>
-                    <TextBlock Text="&#xe635;"
-                                           FontFamily="../Asset/Fonts/#iconfont"
-                                           FontSize="30"
-                                           HorizontalAlignment="Center"
-                                           VerticalAlignment="Center"
-                                           Foreground="Gray"/>
-                    <Border Background="White"/>
-                    <TextBlock Text="&#xe8db;"
-                                           FontFamily="../Asset/Fonts/#iconfont"
-                                           FontSize="30"
-                                           HorizontalAlignment="Center"
-                                           VerticalAlignment="Center"
-                                           Foreground="Gray"/>
-                </UniformGrid>
+                           HorizontalAlignment="Center" Margin="0,10,0,10" />
 
             </Grid>
+
         </Grid>
 
     </Border>
